<resources>
    <string name="app_name">DietTrack</string>
    <string name="boto_entrar">Iniciar sesion</string>
    <string name="boton_registrar">Registrarse</string>
    <string name="texto_registrarse">Registrate a </string>
    <string name="texto_registrarse_google">O registrate con Google</string>
    <string name="menu_seleccion">Selección</string>
    <string name="menu_puntuacion">Puntuacion</string>
    <string name="menu_dietas">Dietas</string>
    <string name="menu_alimentos">Alimentos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="texto_iniciar_invitado">Saltar este paso e iniciar sesión como invitado</string>
    <string name="mensaje_bienvenida">Bienvenido/a a DietTrack</string>
    <string name="app_titulo">DietTrack</string>
    <string name="hint_nombre_usuario">Nombre de usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_correo_electronico">Correo electrónico</string>
    <string name="texto_google">Google</string>
    <string name="content_boton_atras">Atras</string>
    <string name="texto_fecha_nacimiento">Introduce tu fecha de nacimiento:</string>
    <string name="texto_peso_altura">Introduce tu altura y tu peso:</string>
    <string name="hint_fecha">dd/mm/aaaa</string>
    <string name="hint_altura">Altura (m)</string>
    <string name="hint_peso">Peso (kg)</string>
    <string name="texto_tipo_actividad">Tipo de activadad semanal:</string>
    <string name="texto_rb_actividad_muy_leve">Muy leve</string>
    <string name="texto_rb_actividad_leve">Leve</string>
    <string name="texto_rb_actividad_moderada">Moderada</string>
    <string name="texto_rb_actividad_intensa">Intensa</string>
    <string name="texto_rb_actividad_excepcional">Excepcional</string>
    <string name="texto_titulo_datos_usuario">Datos del usuario</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="texto_continuar">Continuar</string>
    <string name="texto_iniciar_sesion_google">O iniciar sesión con Google</string>
    <string name="alimentos_escaneados">Alimentos escaneados</string>
    <string name="diet_list_text">Lista de dietas</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="product_search_button">Search object</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_info_nutri">Información nutricional:</string>
    <string name="texto_valor_energetico">Valor energético</string>
    <string name="texto_grasas">Grasas</string>
    <string name="texto_grasas_saturadas">Grasas saturadas</string>
    <string name="texto_hidratos_carbono">Hidratos de carbono</string>
    <string name="texto_hidratos_azucares">Hidratos de carbono (azúcar)</string>
    <string name="texto_proteinas">Proteinas</string>
    <string name="texto_sal">Sal</string>
    <string name="texto_calcio">Calcio</string>
    <string name="texto_sodio">Sodio</string>
    <string name="texto_calorias">Calorias</string>
    <string name="texto_seleccion">Selecciona los alimentos de la lista de alimentos escaneados para llevar el control de tus macronutrientes diarios. Cada vez que termine una comida introduzca los alimentos comidos y DietTrack mantendrá su control cada día:</string>
    <string name="texto_hecho">Añadir</string>
    <string name="titulo_seleccion_alimentos">Selección de alimentos</string>
    <string name="boton_texto_mostrar_grafico">Mostrar gráfico</string>
    <string name="titulo_puntuacion">Puntuación</string>
    <string name="cerrar_sesion_boton">Cerrar sesión</string>
    <string name="texto_correo_electronico">Correo electrónico</string>
    <string name="fecha_de_nacimiento_texto">Fecha de nacimiento</string>
    <string name="altura_texto">Altura</string>
    <string name="peso_texto">Peso</string>
    <string name="boton_texto_restablecer_datos">Restablecer datos</string>
</resources>
